fixed the issue with a white box appearing on the right of the page on iPhone and iPads

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -1,3 +1,11 @@
+html,
+body {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  overflow: hidden;
+}
+
 div#top .main {
   background-image: url('../images/bkg-main-steelstacks.jpg');
   height: 492px;
